# food

./: .gitignore  README.md  app.py  config.py  create_tables.py  main.py  pyproject.toml  utils.py
agent/: utils.py
backend/: README.md  app.py  config.py  main.py
backend/agent/: model.py
backend/orm/: data_models.py  utils.py
backend/resources/: receipt_1.HEIC
backend/router/: v0.py
backend/scripts/: create_tables.py
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/scripts/: generate-types.sh
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/components/atoms/: Logo.tsx  index.ts
frontend/src/components/molecules/: DropdownMenu.tsx  NavigationBar.tsx  ReceiptDataDisplay.tsx  ReceiptReviewModal.tsx  ReceiptUpload.tsx  UserMenu.tsx  index.ts
frontend/src/components/organisms/: Header.tsx  index.ts
frontend/src/components/templates/: MainLayout.tsx  index.ts
frontend/src/components/ui/: index.ts
frontend/src/lib/: api.ts
frontend/src/pages/: UploadPage.tsx
frontend/src/services/api/: groceryReceipt.ts  utils.ts
frontend/types/: api.ts
model/: groceries.py  orm_utils.py
orm/: data_models.py  utils.py
router/: v0.py
